// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings panel with dotplot image should render 1`] = `
<HeatmapSettings
  changeSetting={[Function]}
  resetSettings={[Function]}
  settings={Object {}}
  storeSettings={Object {}}
  updateSetting={[Function]}
/>
`;

exports[`Settings panel with heatmap image should render 1`] = `
<HeatmapSettings
  changeSetting={[Function]}
  resetSettings={[Function]}
  settings={Object {}}
  storeSettings={Object {}}
  updateSetting={[Function]}
/>
`;

exports[`Settings panel with segcircle image should render 1`] = `
<SegCircleSettings
  changeSetting={[Function]}
  resetSettings={[Function]}
  settings={Object {}}
  storeSettings={Object {}}
  updateSetting={[Function]}
/>
`;
